[project]
name = "pyquoks"
version = "2.6.0"
description = "Пакет PyPI для часто используемых модулей в проектах diquoks"
authors = [
    { name = "Denis Titovets <den232titovets@yandex.ru>" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "pillow (>=12.1.1)",
    "psutil (>=7.2.2)",
    "pydantic (>=2.12.5)",
    "requests (>=2.32.5)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2)",
    "twine (>=6.2.0)",
    "poetry (>=2.3.2)"
]

[tool.pytest]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core (>=2.0.0, <3.0.0)"]
build-backend = "poetry.core.masonry.api"
