[project]
name = "pyquoks"
version = "2.6.2"
description = "Пакет PyPI для часто используемых модулей в проектах diquoks"
authors = [
    { name = "Denis Titovets <den232titovets@yandex.ru>" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "pillow (>=12.2.0)",
    "psutil (>=7.2.2)",
    "pydantic (>=2.13.2)",
    "requests (>=2.33.1)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.3)",
    "twine (>=6.2.0)",
    "poetry (>=2.3.4)"
]

[tool.pytest]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core (>=2.0.0, <3.0.0)"]
build-backend = "poetry.core.masonry.api"
