[project]
name = "pyquoks"
version = "2.7.2"
dependencies = [
    "pillow (>=12.2.0,<13.0.0)",
    "psutil (>=7.2.2,<8.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "requests (>=2.34.2,<3.0.0)",
]
requires-python = ">=3.14.0,<4.0.0"
authors = [
    { name = "Denis Titovets", email = "den232titovets@yandex.ru>" }
]
description = "Пакет PyPI для часто используемых модулей в проектах diquoks"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]

[dependency-groups]
dev = [
    "poetry (>=2.4.1,<3.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "twine (>=6.2.0,<7.0.0)",
]

[tool.pytest]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core (>=2.4.0,<3.0.0)"]
build-backend = "poetry.core.masonry.api"
